--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -22,7 +22,8 @@ jobs:
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3.1.0
         with:
-          version: latest
+          distribution: goreleaser
+          version: v1.18.2
           args: release --rm-dist
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
